// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ConfigureOptions default value via function 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Number
            </p>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
            >
              <input
                name="isExecutionInput"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="configureOptionsForm_isExecutionInput"
              >
                common.configureOptions.askDuringExecution
              </span>
            </label>
          </div>
        </div>
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="configureOptionsForm_defaultValue"
            >
              common.configureOptions.defaultValue (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="number"
                value="123"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test ConfigureOptions runtime execution input 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Number
            </p>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                name="isExecutionInput"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="configureOptionsForm_isExecutionInput"
              >
                common.configureOptions.askDuringExecution
              </span>
            </label>
          </div>
        </div>
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="configureOptionsForm_defaultValue"
            >
              common.configureOptions.defaultValue (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test ConfigureOptions should render configure options 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              test
            </p>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="configureOptionsForm_defaultValue"
            >
              common.configureOptions.defaultValue (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test ConfigureOptions test allowed advanced values 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              Var Test
            </div>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="allowedOptions"
          >
            <span
              class="advancedBtn"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-link"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.configureOptions.returnToBasic
                </span>
              </button>
            </span>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="advancedValue"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="configureOptionsForm_advancedValue"
                >
                  common.configureOptions.jexlLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <textarea
                  autocomplete="off"
                  class="bp3-input bp3-fill"
                  maxlength="1024"
                  name="advancedValue"
                  placeholder="inputTypes.EXPRESSION"
                >
                  \${env.type} == “prod” ? aws1, aws2 : aws3, aws4
                </textarea>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test ConfigureOptions test allowed values 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              test
            </p>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                name="isRequired"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="configureOptionsForm_isRequired"
              >
                common.configureOptions.requiredDuringExecution
              </span>
            </label>
          </div>
        </div>
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="allowedOptions"
          >
            <span
              class="advancedBtn"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-link"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      advancedTitle
                    </span>
                  </button>
                </span>
              </span>
            </span>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="allowedValues"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="configureOptionsForm_allowedValues"
                >
                  allowedValues
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input bp3-tag-input"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        abc
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <span
                      class="bp3-tag"
                      data-tag-index="1"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        xyz
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost"
                      data-mentions="kv-tag-input-allowedValues"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="configureOptionsForm_defaultValue"
            >
              common.configureOptions.defaultValue (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;

exports[`Test ConfigureOptions test regex expression 1`] = `
<div
  class="bp3-dialog Dialog--dialog dialog bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      common.configureOptions.configureOptions
    </h4>
  </div>
  <span
    class="bp3-icon StyledProps--main Dialog--close"
    data-icon="Stroke"
  >
    <svg
      fill="none"
      height="15"
      width="15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 .8l6 6 6-6-12 12 6-6 6 6"
        stroke="#8F90A6"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </span>
  <div
    class="StyledProps--font StyledProps--main Dialog--children dialogContent StyledProps--padding-none"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            variableLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main"
              style="--text-line-clamp: 1;"
            >
              var-test
            </p>
          </div>
        </div>
        <div
          class="bp3-form-group bp3-inline label"
        >
          <label
            class="bp3-label"
          >
            typeLabel
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              test
            </p>
          </div>
        </div>
        <hr
          class="division"
        />
        <div
          class="validationOptions"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="validation"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_validation"
              >
                common.configureOptions.validation
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="None"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    none
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="AllowedValues"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    allowedValues
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="validation"
                      type="radio"
                      value="Regex"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    common.configureOptions.regex
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="regExValues"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="configureOptionsForm_regExValues"
              >
                common.configureOptions.regex
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="regExValues"
              >
                ^a$
              </textarea>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="configureOptionsForm_defaultValue"
            >
              common.configureOptions.defaultValue (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              submit
            </span>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              cancel
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <footer />
</div>
`;
